fixed category header display in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@ a {
   .uk-navbar-container {
     font-family: Staatliches;
   }
+
+.login{
+  height: 100vh
+}
   
   img:hover {
     opacity: 1;
